--- a/Idle_Main.html
+++ b/Idle_Main.html
@@ -94,8 +94,9 @@
 </script>    
 
 <ul class="tab">
-  <li><a href="javascript:void(0)" class="tabLinks active" onclick="openTab(event, 'Resources')">Resources</a></li>
-  <li><a href="javascript:void(0)" class="tabLinks" onclick="openTab(event, 'Upgrades')">Upgrades</a></li>
+    <li><a href="javascript:void(0)" class="tabLinks active" onclick="openTab(event, 'Resources')">Resources</a></li>
+    <li><a href="javascript:void(0)" class="tabLinks" onclick="openTab(event, 'Upgrades')">Upgrades</a></li>
+    <li><a href="javascript:void(0)" class="tabLinks" onclick="openTab(event, 'Territory')">Territory</a></li>
 </ul>
 
 <div id="Resources" class="tabContent">
@@ -172,6 +173,10 @@
     </table>
 </div>
 
+<div id="Territory" class="tabContent">    
+    <h1>Territory</h1>
+</div>
+    
 <script>
 
 startTab();
