Territory should be focus
It’s the only part that stands out from the crowd

--- a/Idle_Main.html
+++ b/Idle_Main.html
@@ -299,7 +299,7 @@ function refresh() {
  
 function startTab() {
     var tabLinks = document.getElementsByClassName("tabLinks");
-    document.getElementById("Resources").style.display = "block";
+    document.getElementById("Territory").style.display = "block";
     tabLinks += " active";
 }    
     
