Territory Building Started
Added buttons in the territory screen that will be used to build on
territory tiles

--- a/Idle_Main.html
+++ b/Idle_Main.html
@@ -12,6 +12,13 @@
         outline:0;
     }
     
+    .PLACEHOLDER {
+        height:50px;
+        width:50px;
+        float: left;
+        margin: 10px;
+    }
+    
     .territoryButton, .selectedTerritoryButton {
 		background-color: #4CAF50;
 		border: none;
@@ -225,6 +232,9 @@
         </tr>
         <tr>
             <td style="font-size:24px" id='territorySecondary'>Secondary: 0</td>
+        </tr>
+        <tr>
+            <td><img src='art/village.png' class='PLACEHOLDER'/><button type='button' class='PLACEHOLDER' width='500'>Build Hut</button></td>
         </tr>
     </table>
     <script>
