Added conquest tab

--- a/Idle_Main.html
+++ b/Idle_Main.html
@@ -205,6 +205,10 @@
             </script></td>
         </tr>
 </table>
+
+<div id='Conquest' class = 'tabContent'>
+    <h1> Conquest </h1>
+</div>
     
 <div id="Military" class="tabContent">
     <h1>Military</h1>
